feat: add Analytics in PartnerPage
